src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_variables_in_same_pou.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: b: Duplicate symbol.
  ┌─ <internal>:5:13
  │
5 │             b: INT;
  │             ^ b: Duplicate symbol.
  ·
9 │             b: BOOL;
  │             - see also

error[E004]: b: Duplicate symbol.
  ┌─ <internal>:9:13
  │
5 │             b: INT;
  │             - see also
  ·
9 │             b: BOOL;
  │             ^ b: Duplicate symbol.
